--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,3 +1,4 @@
+
 # Name of workflow
 name: Node CI
 
@@ -29,18 +30,9 @@ jobs:
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: npm install, build
-        # Install and build project
-        run: |
-          make install
-          make build
-        # Add environment variables
-        env:
-          CI: true
-
+      - name: npm install
+        # Install project
+        run: make install
       - name: Run linter
+        # Run Linter
         run: make lint
-
-      - name: Run tests
-        run: make test
