--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "i18next": "^22.0.6",
     "on-change": "^4.0.2",
