--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "i18next": "^22.0.6",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "yup": "^0.32.11"
   }
